# nginx-learn

./: .gitignore
chap2/: note.md
chap3/: comment.md  hello.c  hello.out  hello3_3_1.c  hello3_5_1.c  nginx3_6_1.c  nginx3_6_2.c  nginx3_6_4.c  nginx3_7_2.c  note.md  test.c  test.out
chap4/: comment.md  note.md  test.txt  test_rn.ipynb
chap5/: comment.md  connect_epoll.cc  hello5_1_1_client.c  hello5_1_1_server.c  hello5_3_1_server.c  hello5_3_2_server.c  hello5_4_server.cc  note.md  pool_single.cc  pool_threads.cc  test.cc  wireshark.pcapng
chap6/: note.md
material/LinuxC++通讯架构实战卷1源码资料/3_3-01/: project1.cpp  ~$nux c++通讯架构实战课程-重要内容记录.docx
material/LinuxC++通讯架构实战卷1源码资料/3_5-01/: project1.cpp
material/LinuxC++通讯架构实战卷1源码资料/3_6-01/: nginx3_6_3.c  project1.cpp
model/: 创建守护进程.cc
nginx-1.22.1/objs/: Makefile  autoconf.err  ngx_auto_config.h
nginx-1.22.1/src/core/: nginx.c
project/: CMakeLists.txt  common.mk  config.mk  makefile  nginx.conf  project.udb  test.cc
project/_include/: ngx_c_conf.h  ngx_c_memory.h  ngx_c_socket.h  ngx_comm.h  ngx_func.h  ngx_global.h  ngx_macro.h
project/app/: nginx.cxx  ngx_c_conf.cxx  ngx_log.cxx  ngx_printf.cxx  ngx_setproctitle.cxx  ngx_string.cxx
project/misc/: ngx_c_memory.cxx
project/net/: ngx_c_socket.cxx  ngx_c_socket_accept.cxx  ngx_c_socket_conn.cxx  ngx_c_socket_inet.cxx  ngx_c_socket_request.cxx
project/proc/: ngx_daemon.cxx  ngx_event.cxx  ngx_process_cycle.cxx
project/signal/: ngx_signal.cxx
project/test/: test1.cc  test2.cc
